--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "peerDependencies": {
     "react": "~0.14.6",
-    "react-dom": "~0.14.6"
+    "react-dom": "~0.14.6",
+    "antd":"^1.5.0"
   },
   "dependencies": {
     "classnames": "^1.2.0",
@@ -84,6 +85,7 @@
     "moment": "^2.10.6",
     "pretty-hrtime": "^0.2.1",
     "react": "~0.14.6",
+    "antd": "^1.5.0",
     "react-addons-test-utils": "^0.14.6",
     "react-dom": "~0.14.6",
     "react-router": "^0.13.3",
